<resources>
    <string name="app_name">EsCore</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Sign in</string>
    <string name="message_welcome_page">Mau belajar Android, iOS, Machine Learning, Cloud, Front-End, Back-End, dan bidang IT lainnya? Di Dicoding aja!</string>
    <string name="title_welcome_page">Selamat datang di Dicoding!</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini ya</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Sudah siap untuk upgrade skill?</string>
    <string name="name">Name</string>
    <string name="message_main_page">Selamat Belajar di Dicoding.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Logout</string>
    <string name="password_validation">Password must be more than 8 characters</string>
    <string name="email_validation">Invalid email format</string>
    <string name="max_words">Your title exceeds the 10 words limit!</string>
    <string name="empty_name">Name cannot be empty</string>
    <string name="empty_email">Email cannot be empty</string>
    <string name="empty_password">Password cannot be empty</string>
    <string name="empty_title">Title cannot be empty</string>
    <string name="empty_desc">Essay cannot be empty</string>
    <string name="confirm_logout">Confirm Logout</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_here">Login here</string>
    <string name="new_here">New here?</string>
    <string name="let_s_get_you_set_up">Let’s get you set up!</string>
    <string name="email_address">Email Address</string>
    <string name="sign_up_your_account">Sign up your account</string>
    <string name="home">Home</string>
    <string name="guide">Guide</string>
    <string name="history">History</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="email_not_found">Email not found</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="result_label">Result: %1$s</string>
    <string name="sugestion_result">Sugestion: %1$s</string>
    <string name="user_name">User Name</string>
    <string name="avatar">Avatar</string>
    <string name="user_email">User Email</string>
    <string name="enter_your_essay_title_here">Enter your Essay title here</string>
    <string name="description">Description</string>
    <string name="write_your_essay_here">Write your essay here!</string>
    <string name="upload">Upload Essay</string>
    <string name="back_to_home">Back to home</string>
    <string name="title">Title</string>
    <string name="essay_title">Essay Title</string>
    <string name="_5_6">5/6</string>
    <string name="suggestion">Suggestion</string>
    <string name="this_is_essay">This is essay!</string>
    <string name="result">Result</string>
    <string name="english_warning">
        <b>Essays must be written exclusively in English,</b>
         adhering to proper grammar, vocabulary, and sentence structure to ensure clarity and coherence. This requirement ensures uniformity in evaluation and allows for a fair assessment of language proficiency, critical thinking, and the ability to effectively use evidence from the source text(s) to support the essay arguments.
    </string>
    <string name="holistic_rating_content">
    After reading each essay and completing the analytical rating form, assign a holistic score based on the rubric below. For the following evaluations, you will need to use a grading scale between 1 (minimum) and 6 (maximum). As with the analytical rating form, the distance between each grade (e.g., 1-2, 3-4, 4-5) should be considered equal.
    </string>
    <string name="Score_6">
    <b>SCORE OF 6:</b>
    An essay in this category demonstrates clear and consistent mastery, although it may have a few minor errors. A typical essay effectively and insightfully develops a point of view on the issue and demonstrates outstanding critical thinking; the essay uses clearly appropriate examples, reasons, and other evidence taken from the source text(s) to support its position; the essay is well organized and clearly focused, demonstrating clear coherence and smooth progression of ideas; the essay exhibits skillful use of language, using a varied, accurate, and apt vocabulary and demonstrates meaningful variety in sentence structure; the essay is free of most errors in grammar, usage, and mechanics.
    </string>
    <string name="Score_5">
    <b>SCORE OF 5:</b>
    An essay in this category demonstrates reasonably consistent mastery, although it will have occasional errors or lapses in quality. A typical essay effectively develops a point of view on the issue and demonstrates strong critical thinking; the essay generally uses appropriate examples, reasons, and other evidence taken from the source text(s) to support its position; the essay is well organized and focused, demonstrating coherence and progression of ideas; the essay exhibits facility in the use of language, using appropriate vocabulary and demonstrates variety in sentence structure; the essay is generally free of most errors in grammar, usage, and mechanics.
    </string>
    <string name="Score_4">
    <b>SCORE OF 4:</b>
    An essay in this category demonstrates adequate mastery, although it will have lapses in quality. A typical essay develops a point of view on the issue and demonstrates competent critical thinking; the essay uses adequate examples, reasons, and other evidence taken from the source text(s) to support its position; the essay is generally organized and focused, demonstrating some coherence and progression of ideas; the essay may demonstrate inconsistent facility in the use of language, using generally appropriate vocabulary and demonstrating some variety in sentence structure; the essay may have some errors in grammar, usage, and mechanics.
    </string>
    <string name="Score_3">
    <b>SCORE OF 3:</b>
    An essay in this category demonstrates developing mastery and is marked by one or more of the following weaknesses: develops a point of view on the issue, demonstrating some critical thinking, but may do so inconsistently or use inadequate examples, reasons, or other evidence taken from the source texts to support its position; the essay is limited in its organization or focus, or may demonstrate some lapses in coherence or progression of ideas; the essay may demonstrate facility in the use of language, but sometimes uses weak vocabulary or inappropriate word choice and/or lacks variety or demonstrates problems in sentence structure; the essay may contain an accumulation of errors in grammar, usage, and mechanics.
    </string>
    <string name="Score_2">
        <b>SCORE OF 2:</b>
    An essay in this category demonstrates little mastery and is flawed by one or more of the following weaknesses: develops a point of view on the issue that is vague or seriously limited, and demonstrates weak critical thinking; the essay provides inappropriate or insufficient examples, reasons, or other evidence taken from the source text to support its position; the essay is poorly organized and/or focused, or demonstrates serious problems with coherence or progression of ideas; the essay displays very little facility in the use of language, using very limited vocabulary or incorrect word choice and/or demonstrates frequent problems in sentence structure; the essay contains errors in grammar, usage, and mechanics so serious that meaning is somewhat obscured.
    </string>
    <string name="logo">Logo</string>
</resources>